mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: masstransit-mongo
  name: masstransit-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: masstransit-mongo
  template:
    metadata:
      labels:
        app: masstransit-mongo
    spec:
      containers:
        - image: mongo         
          name: mongo
          ports:
            - containerPort: 27017            
            - containerPort: 27018            
            - containerPort: 27019            
          resources: {}        
      restartPolicy: Always
status: {}
