sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: sample
  name: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - image: drakon660/kubernetes:sample
          name: sample
          ports:
            - containerPort: 80            
          resources: {}
          resources: {}
      restartPolicy: Always
status: {}
