ubuntu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: ubuntu
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
        - image: debian
          name: debian
          resources: {}        
      restartPolicy: Always
status: {}
