blazor-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: blazor-service
spec:
  selector:
    app: blazorkubernetes
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      nodePort: 30007
    - name: "https"
      protocol: TCP
      port: 443              
      nodePort: 30008
    - name: "db"
      protocol: TCP
      port: 5432              
      nodePort: 30009
  type: NodePort
