masstransit-rabbitmq-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"masstransit-rabbitmq-ui-service"},"name":"masstransit-rabbitmq-ui-service","namespace":"default"},"spec":{"ports":[{"name":"15672","nodePort":30007,"port":15672},{"name":"5672","nodePort":30010,"port":5672}],"selector":{"app":"masstransit-rabbitmq"},"type":"NodePort"}}
  creationTimestamp: "2021-02-23T18:49:47Z"
  labels:
    app: masstransit-rabbitmq-ui-service
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:externalTrafficPolicy: {}
        f:ports:
          .: {}
          k:{"port":5672,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:nodePort: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":15672,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:nodePort: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-02-25T21:32:04Z"
  name: masstransit-rabbitmq-ui-service
  namespace: default
  resourceVersion: "53026"
  uid: 33ab5b03-bd97-47a2-925c-37dfd23c2e00
spec:
  clusterIP: 10.43.28.90
  clusterIPs:
  - 10.43.28.90
  externalTrafficPolicy: Cluster
  ports:
  - name: "15672"
    nodePort: 30007
    port: 15672
    protocol: TCP
    targetPort: 15672
  - name: "5672"
    nodePort: 30010
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: masstransit-rabbitmq
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
