mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
    - name: "27018"
      port: 27018
      targetPort: 27018
    - name: "27019"
      port: 27019
      targetPort: 27019
  selector:
    io.kompose.service: mongo
status:
  loadBalancer: {}
