sample-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: sample-service
 labels:
  app: sample-service
spec:
 type: NodePort
 ports:
  - port: 80
    nodePort: 30008
 selector:
  app: sample
