sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---
# apiVersion: v1
# kind: Service
# metadata:
#  name: nginx-service
#  labels:
#   app: nginx-service
# spec:
#  type: NodePort
#  ports:
#   - port: 80
#     nodePort: 30008
#  selector:
#   app: nginx

apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
  app: nginx-service
spec:
 type: ClusterIP
 ports:
  - port: 80
 selector:
  app: nginx
