sftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.22.0 (955b78124)  
  labels:
    io.kompose.service: sftp
  name: sftp
spec:
  type: NodePort
  ports:
    - name: "2222"
      port: 22      
      nodePort: 30220
  selector:
    io.kompose.service: sftp
status:
  loadBalancer: {}
